--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
       defer
     ></script>
-    <script src="webgl-demo.js" type="module"></script>
+    <script src="index.js" type="module"></script>
   </head>
 
   <body>
